    whether to preserve those changes, following the following
    logic:

      If the format is html, and 'stx_level' is not passed in or
      is the same as the object's current settings, return the
      cached cooked text.  Otherwise, recook.  If we recook and
      'setlevel' is true, then set the recooked text and
      stx_level on the object.

 Bug fixes

  - Stopped polluting the browser with persistent skin cookie;
    clear it as well on logout (Tracker #304).

  - Cleaned up folder content filtering (Tracker #298, thanks
    to Chris Withers for the patch).

  - Implement new "List folder contents" permission (Tracker
    #320), to prevent non-privileged users from being able to
    browse 'folder_contents' (permission is by default mapped
    to 'Owner' and 'Manager').

    Note that this is really only a UI change:
    'PortalFolder.contentIds', 'PortalFolder.contentValues', and
    'PortalFolder.contentItems' are still public, to allow for
    reasonable "site map" views on folders.

  - Use saner type ID listing in 'search_form' (Tracker #324).

  - Rewired "POST target" skin methods, replacing filesystem-based
    DTML Methods with filesystem-based Python Scripts (from
    Tracker #301 -- thanks to Chris Withers).

  - Implemented *LARGE* patch to CMFDefault.DiscussionItem and
    CMFDefault.DiscussionTool, plus removal of
    CMFDefault.Discussions:  changed threading strategy to remove
    dependency on the path of the "host" content object.  Includes
    an ExternalMethod, CMFDefault/Extensions/update_discussion.py,
    which must be run to convert existing content which contains
    discussion.

  - Overrode DublinCore's isEffective in CMFCalendar.Event to
    always return true;  this change prevents blocking view of
    the event by standard_html_header.

  - Updated INSTALL.txt to note that:

     o Use with Zope 2.4.0a1 is *not* recommended.

     o CMFDecor requires Zope Page Templates (Tracker #291).
